# mofi

./: README.md  package.json
.github/workflows/: release-macos.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte  global.css
